# adventofcode

./: adventofcode.go  go.mod  input_read.py  pyproject.toml
03/: 03.py
05/: 05.py
06/: 06.py
2019/02/: 02.py
2019/03/: 03.py
2019/04/: 04.py
2019/05/: 05.py
2020/01/: 01.py
2020/02/: 02.py
2020/04/: 04.py
2020/07/: 07.py
2021/: input_read.py
2021/01/: 01.go  01.py
2021/02/: 02.go
2021/03/: 03.go
2021/04/: 04.go
2021/05/: 05.go
2021/06/: 06.go
2021/07/: 07.go  07_test.go
2021/08/: 08.go
2021/09/: 09.go
2021/10/: 10.go
2021/11/: 11.go
2021/12/: 12.go
2021/13/: 13.go
2021/14/: 14.go
2022/01/: 01.go
